# spn

./: .actrc  .clang-tidy  .clangd  .gdbinit  .gitignore  .gitmodules  2  AGENTS.md  CMakeLists.txt  COMPILER_TEST_COMPLETE.txt  COMPILER_TEST_REPORT.md  COMPILER_TEST_RESULTS.txt  Dockerfile  EXAMPLES.md  LICENSE  Makefile  README.md  agents.md  bootstrap.sh  dist-workspace.toml  gen.md  libs.md  link.sh  plan.md  sp.build.jsonl  spcc.build.jsonl  spn.build.jsonl  spn.c  spn.h  spn.lock.h  spn.lock.lua  spn.lua  spn.toml  todo.md  toml.build.jsonl  utest.build.jsonl
source/: CMakeLists.txt  api.c  app.c  app.h  autoconf.h  build.lua  c.lua  cache.c  cache.h  cc.c  cli.c  cli.h  cmake.c  cmake.h  ctx.c  ctx.h  debugger.lua  embed.h  err.h  event.c  event.h  event_buffer.h  executor.c  executor.h  filter.c  filter.h  foobar.c  gen.c  gen.h  graph.c  graph.h  index.c  index.h  inspect.lua  intern.c  intern.h  iterator.lua  jit.c  jit.h  lock.c  (+53 more)
source/api/: api.c  api.h  types.h
source/api/autoconf/: autoconf.c  autoconf.h
source/api/cmake/: cmake.c  cmake.h
source/api/core/: core.c  core.h  types.h
source/app/: app.c  app.h  types.h
source/cli/: add.c  build.c  clean.c  cli.c  cli.h  completions.c  copy.c  dispatch_publish.c  generate.c  graph.c  index.c  init.c  list.c  ls.c  manifest.c  publish.c  publish.h  run.c  test.c  tool.c  types.h  update.c  which.c
source/codegen/: codegen.c  codegen.h  json.c  loader.c  lower.c  lower.h  options.c  schemas.jtd.json  types.h  when.c
source/compiler/: driver.c  driver.h  exports.c  exports.h  flags.c  flags.h  gnu.c  msvc.c  toc.c  toc.h  types.h
source/complete/: complete.c  complete.h
source/ctx/: ctx.c  ctx.h  types.h
source/dag/: dag.c  dag.h  executor.c  glob.c  lower.c  occ.c  occ.h  run.c  store.c  types.h  wasi.c  wasi.h
source/enum/: enum.c  enum.h
source/error/: error.c  error.h  types.h
source/event/: build.c  build.h  event.c  event.h  log.c  log.h  types.h
source/filter/: filter.c  filter.h  types.h
source/forward/: types.h
source/git/: cache.c  cache.h  key.c  key.h  patch.c  patch.h  types.h
source/graph/: graph.c  graph.h  types.h
source/index/: cache.c  cache.h  index.c  index.h  json.c  json.h  publish.c  publish.h  types.h
source/intern/: context.c  intern.c  intern.h  types.h
source/lock/: lock.c  lock.h  types.h
source/log/: log.c  log.h  types.h
source/manifest/: manifest.jtd.json
source/option/: types.h
source/paths/: types.h
source/pkg/: id.c  id.h  load.c  load.h  mutate.c  mutate.h  options.c  options.h  patch.c  patch.h  pkg.c  pkg.h  types.h
source/profile/: profile.c  profile.h  types.h
source/resolve/: resolve.c  resolve.h  types.h
source/semver/: compare.c  compare.h  convert.c  convert.h  parser.c  parser.h  types.h
source/session/: invocation.c  invocation.h  options.c  session.c  session.h  types.h
source/sha256/: sha256.c  sha256.h  types.h
source/sp/: atomic_file.h  bind.h  cli.c  cli.h  coff.h  color.c  color.h  compat.h  fs.c  fs.h  glob.h  hash.h  ht.h  io.c  io.h  it.c  it.h  macho.h  macro.h  msvc.h  os.c  os.h  prompt.h  ps.c  ps.h  sp_atomic.h  sp_elf.h  sp_graph.h  sp_om.h  sp_tls.h  str.c  str.h  terminal.c  tm.c  tm.h
source/spn/: build.h  config.h  gen.h  recipe.h  spn.c  spn.h  types.h
source/task/: add.c  build.c  clean.c  configure.c  generate.c  graph.c  index.c  init.c  plan.c  publish.c  resolve.c  sync.c  task.c  task.h  test.c  types.h  unit.c  update.c  which.c
source/toml/: edit.c  edit.h  issue.h  loader.c  loader.h  types.h
source/toolchain/: builtins.c  catalog.c  catalog.h  launcher.c  launcher.h  provision.c  provision.h  select.c  select.h  sha256.c  sha256.h  toolchain.c  toolchain.h  toolchains.json  toolchains.jtd.json  types.h
source/triple/: triple.c  triple.h
source/tui/: spinner.c  spinner.h  table.c  table.h  tui.c  tui.h  types.h
source/unit/: build.c  build.h  compiler.c  compiler.h  node.c  node.h  package.c  package.h  types.h
source/when/: types.h  when.c  when.h
test/: AGENTS.md  CMakeLists.txt  config.h  downstream.c  fail_run.c  gcc.c  main.c  notes.md  spn.lock.lua  spn.lua  test.c
test/cli/: cli.c  main.c
test/core/: CMakeLists.txt  cli.c  closure.c  compiler.c  complete.c  filter.c  fs.c  graph.c  intern.c  lazy.c  lock.c  manifest.c  mz.c  options.c  ordered_map.c  pkg.c  schema.c  stable_map.c  transcript.c  triple.c  unit.c  when.c
test/e2e/: CMakeLists.txt  main.c
test/fuzz/: CMakeLists.txt
test/graph/: executor.md  graph.h  main.c  main.claude.c  spn.toml  test.h
test/integration/: CMakeLists.txt  action.h  cli.c  common.h  compile_commands.c  consume.c  corrupt.c  cxx.c  deps.c  exports.c  freshness.c  harness.c  harness.h  layout.c  log.c  main.c  offline.c  options.c  patch.c  platform.c  profile.c  reexport.c  reproduce.c  run.c  script.c  spam.c  target.c  units.c  worlds.c
test/lock/: extra.c  generated.c  partial.c  ungenerated.c  unsorted.c
test/manual/: cache-verification.md
test/sp_test/: utest.h
test/spn_tool/: spn.toml
test/task/: main.c
test/tools/: action.h  caps.c  caps.h  command.h  ctx.c  fuzz.c  fuzz.h  git.c  harness.c  harness.h  rebuild.h  repo.c  run_api_graphs.sh  sp_fuzz.c  sp_fuzz.h  sp_fuzz_cli.c  sp_sim.c  sp_sim.h  sp_test.h  test.c  test.h  tmp.c  toml.c  ubench.h  utest.h  wasm_emit.c  wasm_emit.h
tools/: CMakeLists.txt  cc.c  devenv.ps1  embed.c  jtd.c  jtd.h  lib.c  occ.h  size.c  sp.h  sp.natvis  sp_template.h  toolchain.c  yyjson_stub.c
tools/cmake/: fetch.cmake  libs.cmake  zig-cc.sh  zig-cxx.sh  zig-toolchain.sh
tools/codegen/: abi.c  codegen.h  extract.c  main.c  render.c  run.c  walk.c
tools/dag/: base.css  dag.css  dag.html  dag.js
tools/gdb/: spn_gdb.py
tools/licenses/: libfetch
tools/patches/: sp-ps-output-drain.patch  wamr-mingw.patch  wamr-wasi-hook.patch
tools/spn/: build.c  configure.c
tools/templates/: forward.tmpl  header.tmpl  header_fns.tmpl  header_impl.tmpl  read.tmpl  root.tmpl  root_decl.tmpl  root_impl.tmpl  validators.tmpl  write.tmpl  write_opt.tmpl  write_req.tmpl
(+1599 files in other folders)
