set(SPN_SOURCES
  api/autoconf/autoconf.c
  api/cmake/cmake.c
  api/core/core.c
  api/make/make.c
  api/node/node.c
  app/app.c
  cli/add.c
  cli/build.c
  cli/clean.c
  cli/cli.c
  cli/copy.c
  cli/generate.c
  cli/graph.c
  cli/init.c
  cli/list.c
  cli/ls.c
  cli/manifest.c
  cli/publish.c
  cli/run.c
  cli/test.c
  cli/tool.c
  cli/update.c
  cli/which.c
  ctx/ctx.c
  enum/enum.c
  event/event.c
  event/log.c
  external/cc.c
  external/cJSON.c
  external/git.c
  external/mz.c
  external/obj.c
  external/tcc.c
  external/tom.c
  filter/filter.c
  gen.c
  git/cache.c
  git/key.c
  index/cache.c
  index/index.c
  index/json.c
  index/publish.c
  intern/context.c
  intern/intern.c
  lock/lock.c
  log/lazy/lazy.c
  log/log.c
  pkg/id.c
  pkg/load.c
  pkg/mutate.c
  pkg/pkg.c
  profile/profile.c
  resolve/resolve.c
  semver/compare.c
  semver/convert.c
  semver/parser.c
  session/registry/registry.c
  session/session.c
  sp/cli.c
  sp/color.c
  sp/io.c
  sp/it.c
  sp/os.c
  sp/ps.c
  sp/str.c
  sp/terminal.c
  sp/tm.c
  spn.c
  target/mutate.c
  target/select.c
  target/target.c
  task/build/build.c
  task/build/nodes/embed.c
  task/build/nodes/link.c
  task/build/nodes/object.c
  task/build/nodes/package.c
  task/build/nodes/stamp.c
  task/build/nodes/user.c
  task/build.c
  task/configure.c
  task/generate.c
  task/graph.c
  task/resolve.c
  task/sync.c
  task/task.c
  task/test.c
  task/unit.c
  task/which.c
  toolchain/toolchain.c
  triple/triple.c
  tui/spinner.c
  tui/table.c
  tui/tui.c
  unit/package.c
)

add_executable(spn ${SPN_SOURCES})
target_include_directories(spn PRIVATE
  ${SRC}
  ${SRC}/external
  ${CMAKE_SOURCE_DIR}/include
  ${STORE}/include
)
target_link_libraries(spn PRIVATE m ${TCC_LIB})
target_compile_options(spn PRIVATE -include ${SRC}/sp/compat.h)
add_dependencies(spn headers tcc spn_embed)

set_source_files_properties(${EMBED_OBJ} PROPERTIES EXTERNAL_OBJECT TRUE GENERATED TRUE)
target_sources(spn PRIVATE ${EMBED_OBJ})
