set(SPN_SOURCES
  api/api.c
  api/autoconf/autoconf.c
  api/cmake/cmake.c
  api/core/core.c
  api/make/make.c
  api/node/node.c
  app/app.c
  cli/add.c
  cli/build.c
  cli/clean.c
  cli/cli.c
  cli/copy.c
  cli/generate.c
  cli/graph.c
  cli/init.c
  cli/list.c
  cli/ls.c
  cli/manifest.c
  cli/publish.c
  cli/run.c
  cli/test.c
  cli/tool.c
  cli/update.c
  cli/which.c
  codegen/codegen.c
  codegen/json.c
  codegen/lower.c
  codegen/options.c
  codegen/when.c
  ctx/ctx.c
  enum/enum.c
  event/event.c
  event/log.c
  external/cc.c
  external/cJSON.c
  external/git.c
  external/obj.c
  external/tom.c
  external/wasm/abi.c
  external/wasm/guest.c
  external/wasm/wasm.c
  filter/filter.c
  gen.c
  git/cache.c
  git/key.c
  index/cache.c
  index/index.c
  index/json.c
  index/publish.c
  intern/context.c
  intern/intern.c
  lock/lock.c
  log/lazy/lazy.c
  log/log.c
  pkg/id.c
  pkg/load.c
  pkg/mutate.c
  pkg/options.c
  pkg/pkg.c
  profile/profile.c
  resolve/resolve.c
  semver/compare.c
  semver/convert.c
  semver/parser.c
  session/invocation.c
  session/registry/registry.c
  session/session.c
  sp/color.c
  sp/io.c
  sp/it.c
  sp/os.c
  sp/str.c
  sp/terminal.c
  spn.c
  target/closure.c
  target/mutate.c
  target/select.c
  target/target.c
  task/build/build.c
  task/build/nodes/embed.c
  task/build/nodes/link.c
  task/build/nodes/object.c
  task/build/nodes/package.c
  task/build/nodes/script.c
  task/build/nodes/stamp.c
  task/build/nodes/user.c
  task/add.c
  task/build.c
  task/clean.c
  task/configure.c
  task/generate.c
  task/graph.c
  task/index.c
  task/init.c
  task/publish.c
  task/resolve.c
  task/sync.c
  task/task.c
  task/test.c
  task/unit.c
  task/update.c
  task/which.c
  toml/edit.c
  toml/loader.c
  toolchain/catalog.c
  toolchain/provision.c
  toolchain/select.c
  toolchain/sha256.c
  toolchain/toolchain.c
  triple/triple.c
  tui/tui.c
  unit/package.c
  when/when.c
)

add_executable(spn ${SPN_SOURCES}
  ${SRC}/codegen/gen/config.gen.c
  ${SRC}/codegen/gen/manifest.gen.c
  ${SRC}/codegen/gen/release.gen.c
  ${SRC}/codegen/gen/toolchains.gen.c
  ${SRC}/codegen/gen/abi.gen.c)
target_include_directories(spn PRIVATE
  ${SRC}
  ${SRC}/external
  ${CMAKE_SOURCE_DIR}/include
  ${SRC}/codegen/gen
  ${STORE}/include
)
target_link_libraries(spn PRIVATE m vmlib yyjson)
# vmlib carries C++ objects (WAMR Fast JIT: asmjit + x86_64 codegen). spn's own
# sources are all C, so CMake would link with the C driver and miss the C++
# runtime; force the C++ driver (zig c++) to pull it in.
set_target_properties(spn PROPERTIES LINKER_LANGUAGE CXX)
add_dependencies(spn headers spn_embed spn_codegen_gen)

set_source_files_properties(${EMBED_OBJ} PROPERTIES EXTERNAL_OBJECT TRUE GENERATED TRUE)
target_sources(spn PRIVATE ${EMBED_OBJ})
